Adding database mappings and integration tests. Seperated out xml classes.
Related Work Items: #42

--- a/Metrics.Data/Metrics.Data.csproj
+++ b/Metrics.Data/Metrics.Data.csproj
@@ -99,9 +99,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mapping\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
