--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Metrics.Data.Experiment\packages.config" />
   <repository path="..\Metrics.Data\packages.config" />
+  <repository path="..\Metrics.IntegrationTests\packages.config" />
+  <repository path="..\Metrics.SampleGenerator\packages.config" />
   <repository path="..\Metrics.Tests\packages.config" />
+  <repository path="..\MetricsImporter\packages.config" />
 </repositories>
